# cvm

./: CHANGELOG.md  Cargo.toml  README.md  build_debug.sh  build_linux_static.sh  env  install.sh
.github/: FUNDING.yml
.github/workflows/: action.yml
config/: config.toml  config_remote.toml
config/systemd/: cnode.service
docs/: codelab.json  index.html
docs/Cardano Version Manager English/: codelab.json  index.html
docs/Cardano Version Manager Espanol/: codelab.json  index.html
docs/english/: codelab.json  index.html
docs/source/: cvm_en.md  cvm_es.md  index.md
docs/spanish/: codelab.json  index.html
src/: env.rs  main.rs  storage.rs
src/commands/: command.rs  config.rs  init.rs  install.rs  list.rs  mod.rs  start.rs  stop.rs  update.rs  use.rs
src/config/: config.rs  enviroment.rs  mod.rs  remote_config.rs  state_config.rs
src/context/: context.rs  storage.rs
src/error/: error.rs  message.rs
src/message/: message.rs
src/resolvers/: folders.rs  mod.rs  routes_resolve.rs
src/resolvers/folders/: custom_folders.rs  mod.rs  system_folders.rs
src/subcommands/: commands_config.rs  config.rs  mod.rs  subcommand.rs  subcommand_strategy.rs
src/subcommands/subcommands_impl/: clean.rs  config.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  start.rs  stop.rs  update.rs  use.rs
src/task/: cvm_error.rs  folders.rs  message_type.rs  mod.rs  task.rs  task_manager.rs  task_type.rs
src/task/task_impl/: build_cardano_node_task.rs  check_update_task.rs  copy_bin_task.rs  create_folder_structure_task.rs  deploy_system_task.rs  download_config_files_task.rs  empty_task.rs  install_dependences_task.rs  install_haskell_ghc_task.rs  install_libsodium_task.rs  mod.rs  run_command_task.rs  service_manager_task.rs  set_enviroment_variable.rs  task_input_data.rs  use_version_task.rs
src/task/task_impl/commons/: empty_task.rs  file_manager_task.rs  folder_manager_task.rs  mod.rs  permission_task.rs  run_command_task.rs
src/task/task_impl/config/: mod.rs  update_config_files_task.rs
src/task/task_impl/init/: create_folder_structure_task.rs  install_ghcup_task.rs  (+6 more)
src/task_manager/: mod.rs  task_manager.rs
src/term/: log_level.rs  mod.rs  term.rs
src/terminal/: config.rs
src/terminal/subcommands_impl/: init.rs  install.rs  mod.rs  start.rs  stop.rs  update.rs  use.rs
src/utils/: download_manager.rs  folders.rs  mod.rs  url_build.rs  user.rs  version_utils.rs
(+27 files in other folders)
