[package]
name = "cvm"
version = "0.1.0"
edition = "2021"
authors = ["Orelvis Lago Vasallo"]
description = "CLI for version control in cardano pools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "yaml"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] , default-features = false}
tokio = { version = "1", features = ["full"] }
execute = "0.2.9"
duct = "0.13.5"
config = "0.11"
rust-ini = "0.17"
traitcast = "0.5.0"
os_info = "3"
rs-release = "0.1.7"
toml = "0.5"
serde = "1.0.136"
futures = "0.3"
directories = "4.0"
owo-colors = "3.2.0"
globalenv = "0.4.1"
strfmt = "0.1.6"
regex = "1"
walkdir = "2.3.2"
serde_json = "1.0.40"